Fixed a short fancy slider flicker
This only happens when all the resources are cached.

--- a/src/app/fancy-slider/_fancy-slider.scss
+++ b/src/app/fancy-slider/_fancy-slider.scss
@@ -10,6 +10,10 @@ $fancy-slider-controls-z-index: 2000;
 .fancy-slider {
   bottom: 0;
   left: 0;
+
+  // The slider is shown from its directive only when everything is ready
+  opacity: 0;
+
   overflow: hidden;
   position: absolute;
   right: 0;
